# vcpkg-gmp-bug-example

./: .gitignore  CMakeLists.txt  common.h  local_smooth.cpp
cmake/: FindGMP.cmake
